# SpotiBot

./: .gitignore  Object Model Auto-Generated Docstrings.md  README.md  environment.yml  pyproject.toml
spotibot/: __init__.py
spotibot/base/: __init__.py
spotibot/base/auth/: OAuth.py  __init__.py
spotibot/base/config/: Configuration.py  __init__.py
spotibot/core/: __init__.py
spotibot/core/endpoints/: Generic.py
spotibot/core/objects/: Activity.py  Context.py  Device.py  General.py  Music.py  Podcasts.py  Request.py  Time.py  User.py  __init__.py
spotibot/core/utils/: FileManager.py  GetConfigs.py  Hasher.py  __init__.py
spotibot/mongo/conn/: Connector.py
spotibot/mongo/core/objects/: Activity.py  User.py
spotibot/mongo/objects/: General.py  mongo.py
spotibot/mongo/utils/: Handlers.py
tests/: conftest.py
tests/core/objects/: test_Music.py
tests/mongo/utils/: test_Handlers.py
utils_independent/: DocParser.py  ImplementObjectHandler.py  PodcastTrueUp.py  TestCases.py
