[tool.poetry]
name = "spotibot"
version = "0.1.0"
description = "A small library to collect Spotify listening activity."
authors = ["Grant Murray <gmurray203@gmail.com>"]
license = "MIT"
packages = [{include = "spotibot"}]
include = ["spotibot/*"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "pandas>=1.0.3", "spotipy>=2.12.0"]
build-backend = "poetry.masonry.api"
